Exhibitor profiles broken info banner fix

--- a/assets/styles/modules/_info-banner.scss
+++ b/assets/styles/modules/_info-banner.scss
@@ -4,7 +4,7 @@
   background-color: $primary-dark;
   padding: 50px 0 100px;
 
-  z-index: 1;
+  z-index: 999;
 
   .confetti-accent {
     bottom: 0;
